--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "color-grading",
+  "homepage": "https://androluix.github.io/color-grading",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.13"
   }
 }
